GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/Redshift_Points_Accrual_Incremental__c.object-meta.xml
<CustomObject>
    <label>Redshift Points Accrual Incremental</label>
    <nameField>
        <displayFormat>RPA-{0000000000}</displayFormat>
        <label>Redshift Points Accrual Incremental</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redshift Points Accrual Incremental</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>