GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/AllocationDate__c.field-meta.xml
<CustomField>
    <fullName>AllocationDate__c</fullName>
    <label>AllocationDate</label>
    <type>DateTime</type>
</CustomField>