GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/AllocationReason__c.field-meta.xml
<CustomField>
    <fullName>AllocationReason__c</fullName>
    <label>AllocationReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>