GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/BookingDate__c.field-meta.xml
<CustomField>
    <fullName>BookingDate__c</fullName>
    <label>BookingDate</label>
    <type>DateTime</type>
</CustomField>