GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/ManualAllocationReason__c.field-meta.xml
<CustomField>
    <fullName>ManualAllocationReason__c</fullName>
    <label>ManualAllocationReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>