GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/MemberSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>MemberSalesforceId__c</fullName>
    <label>MemberSalesforceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>