GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/TicketPnr__c.field-meta.xml
<CustomField>
    <fullName>TicketPnr__c</fullName>
    <label>TicketPnr</label>
    <length>64</length>
    <type>Text</type>
</CustomField>