GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/fields/TicketTcn__c.field-meta.xml
<CustomField>
    <fullName>TicketTcn__c</fullName>
    <label>TicketTcn</label>
    <length>64</length>
    <type>Text</type>
</CustomField>