GearsetPOC/force-app/main/default/objects/Redshift_Points_Accrual_Incremental__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AllocationPartner__c</columns>
    <columns>BookingDate__c</columns>
    <columns>AllocationReason__c</columns>
    <columns>MemberSalesforceId__c</columns>
    <columns>MembershipNumber__c</columns>
    <columns>Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_Id__c</columns>
    <columns>Id__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>AllocationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>